[package]
name = "parquet-to-mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
color-eyre = "0.6"
parquet = "49"
arrow = "49.0.0"
itertools = "0.12"
chrono = "0.4"
format-sql-query = "0.4.0"
